unpackaged/main/default/objects/EBH_Project__c/fields/EBH_3PPInfoAdded__c.field-meta.xml
<CustomField>
    <fullName>EBH_3PPInfoAdded__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>When 3PP Id was added in the Shutl portal</inlineHelpText>
    <label>3PP Info Added Date</label>
    <type>Date</type>
</CustomField>