unpackaged/main/default/objects/EBH_Project__c/fields/EBH_Acceleration_seller__c.field-meta.xml
<CustomField>
    <fullName>EBH_Acceleration_seller__c</fullName>
    <formula>IF(
AND(
 EBH_Seller__r.EBH_BOBManaged__c = TRUE,  EBH_Seller__r.EBH_SoldItems__c &gt;= 15000),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acceleration seller</label>
    <type>Checkbox</type>
</CustomField>