unpackaged/main/default/objects/EBH_Project__c/fields/EBH_AcceptedTC__c.field-meta.xml
<CustomField>
    <fullName>EBH_AcceptedTC__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>Date when seller accepted T&amp;Cs in the Shutl portal</inlineHelpText>
    <label>Accepted T&amp;Cs Date</label>
    <type>Date</type>
</CustomField>