unpackaged/main/default/objects/EBH_Project__c/fields/EBH_AvisCreationDateFirst__c.field-meta.xml
<CustomField>
    <fullName>EBH_AvisCreationDateFirst__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>Date when first Avis is created.
Avis - is created every time seller creates a commitment in 3PP system to ship certain items to Fiege, Fulfilment Center</inlineHelpText>
    <label>Avis Creation Date (first)</label>
    <type>Date</type>
</CustomField>