unpackaged/main/default/objects/EBH_Project__c/fields/EBH_BillingAgreementCompleted__c.field-meta.xml
<CustomField>
    <fullName>EBH_BillingAgreementCompleted__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>Date when seller accepted Billing Agreement in Shutl portal</inlineHelpText>
    <label>Billing Agreement Completed Date</label>
    <type>Date</type>
</CustomField>