unpackaged/main/default/objects/EBH_Project__c/fields/EBH_CarrierOther__c.field-meta.xml
<CustomField>
    <fullName>EBH_CarrierOther__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>Carrier that seller is currently using.</inlineHelpText>
    <label>Carrier (other)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>GLS</fullName>
            </value>
            <value>
                <fullName>DPD</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>