unpackaged/main/default/objects/EBH_Project__c/fields/EBH_Contact__c.field-meta.xml
<CustomField>
    <fullName>EBH_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#US-0015700. Lookup (Contact)</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>