unpackaged/main/default/objects/EBH_Project__c/fields/EBH_DaysInAcquisition__c.field-meta.xml
<CustomField>
    <fullName>EBH_DaysInAcquisition__c</fullName>
    <description>#US-0015700</description>
    <formula>IF(
 ISNULL(EBH_InitialCallDate__c), NULL,

IF(
AND(
ISNULL( EBH_ThirdPartyProviderDate__c ), ISNULL( EBH_AcceptedTC__c )),
TODAY() - EBH_InitialCallDate__c,


IF(
ISNULL(EBH_ThirdPartyProviderDate__c),
EBH_AcceptedTC__c - EBH_InitialCallDate__c,


IF(
ISNULL( EBH_AcceptedTC__c ),
EBH_ThirdPartyProviderDate__c - EBH_InitialCallDate__c,


IF(
EBH_AcceptedTC__c &gt; EBH_ThirdPartyProviderDate__c,
EBH_ThirdPartyProviderDate__c - EBH_InitialCallDate__c,


EBH_AcceptedTC__c - EBH_InitialCallDate__c



)))))</formula>
    <inlineHelpText>Number of Days that seller spent in the Acquisition stage (starting from the date when a seller got the first call to the date when he selected 3PP in Shutl or Accepted T&amp;Cs)</inlineHelpText>
    <label>Days in Acquisition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>