unpackaged/main/default/objects/EBH_Project__c/fields/EBH_DaysInActivation__c.field-meta.xml
<CustomField>
    <fullName>EBH_DaysInActivation__c</fullName>
    <description>#US-0015700</description>
    <formula>IF(
ISNULL(EBH_AvisCreationDateFirst__c), NULL,

IF(
 ISNULL(EBH_SoldItemDateFirst__c), TODAY() - EBH_AvisCreationDateFirst__c,

EBH_SoldItemDateFirst__c - EBH_AvisCreationDateFirst__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText># Days that seller spent in the Activation stage (from the date when EBFSKU Prefix was created to the date when a seller sold first fulfillment item)</inlineHelpText>
    <label>Days in Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>