unpackaged/main/default/objects/EBH_Project__c/fields/EBH_DaysInOnboarding__c.field-meta.xml
<CustomField>
    <fullName>EBH_DaysInOnboarding__c</fullName>
    <description>#US-0015700</description>
    <formula>IF( and(ISNULL(EBH_AcceptedTC__c),  ISNULL(EBH_ThirdPartyProviderDate__c)) , 
NULL, 

IF(ISNULL(EBH_ThirdPartyProviderDate__c), 

IF(ISNULL(EBH_EBFSKUIDCreationDate__c),
TODAY() - EBH_AcceptedTC__c, 
EBH_EBFSKUIDCreationDate__c - EBH_AcceptedTC__c),


IF(ISNULL(EBH_AcceptedTC__c), 

IF(ISNULL(EBH_EBFSKUIDCreationDate__c),
TODAY() - EBH_ThirdPartyProviderDate__c, 
EBH_EBFSKUIDCreationDate__c - EBH_ThirdPartyProviderDate__c),



IF(ISNULL(EBH_EBFSKUIDCreationDate__c),
TODAY() - IF(
EBH_ThirdPartyProviderDate__c &lt; EBH_AcceptedTC__c,
EBH_ThirdPartyProviderDate__c,
EBH_AcceptedTC__c),

EBH_EBFSKUIDCreationDate__c - IF(
EBH_ThirdPartyProviderDate__c &lt; EBH_AcceptedTC__c,
EBH_ThirdPartyProviderDate__c,
EBH_AcceptedTC__c))

)))</formula>
    <inlineHelpText># Days that seller spent in Onboarding stage (starting from the date when 3PP or Terms &amp; Conditions were selected in Shutl to the date when EBFSKU Prefix was created)</inlineHelpText>
    <label>Days in Onboarding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>