unpackaged/main/default/objects/EBH_Project__c/fields/EBH_DaysInScaling__c.field-meta.xml
<CustomField>
    <fullName>EBH_DaysInScaling__c</fullName>
    <description>#US-0015700</description>
    <formula>IF(ISNULL(EBH_SoldItemDateFirst__c),
NULL, 
TODAY() - EBH_SoldItemDateFirst__c)</formula>
    <inlineHelpText># Days that the seller spent in selling stage (starting from the date when the first fulfillment item was sold to today)</inlineHelpText>
    <label>Days in eFF Selling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>