unpackaged/main/default/objects/EBH_Project__c/fields/EBH_DMCInterestedCommittedDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_DMCInterestedCommittedDate__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>Date Stamp when seller committed or was interested to participate in this project.</inlineHelpText>
    <label>DMC Interested/DMC Committed Date</label>
    <type>Date</type>
</CustomField>