unpackaged/main/default/objects/EBH_Project__c/fields/EBH_EBFSKUID__c.field-meta.xml
<CustomField>
    <fullName>EBH_EBFSKUID__c</fullName>
    <description>#US-0015700</description>
    <label>EBFSKU Prefix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>