unpackaged/main/default/objects/EBH_Project__c/fields/EBH_EBFSKUIDCreationDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_EBFSKUIDCreationDate__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>EBFSKU-ID is a 5-digit fulfilment identifier  from eBay. Is created when seller has accepted T&amp;C &amp; Billing Agreement</inlineHelpText>
    <label>EBFSKU Prefix Creation Date</label>
    <type>Date</type>
</CustomField>