unpackaged/main/default/objects/EBH_Project__c/fields/EBH_ExpectedSignUpDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_ExpectedSignUpDate__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>Date by when seller is expected to sign up in the Shutl portal</inlineHelpText>
    <label>Expected Sign Up Date</label>
    <type>Date</type>
</CustomField>