unpackaged/main/default/objects/EBH_Project__c/fields/EBH_FulfilmentItemCreationDateFirst__c.field-meta.xml
<CustomField>
    <fullName>EBH_FulfilmentItemCreationDateFirst__c</fullName>
    <description>#US-0015700
US-0007126 - Help text update</description>
    <inlineHelpText>This is the date the seller generates the EBFSKUs in their 3PP/Inventory Management Software for their inventory</inlineHelpText>
    <label>Fulfilment Item Creation Date (first)</label>
    <type>Date</type>
</CustomField>