unpackaged/main/default/objects/EBH_Project__c/fields/EBH_InitialCallDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_InitialCallDate__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>Date Stamp when seller was contacted regarding Fulfilment project for the first time</inlineHelpText>
    <label>Initial Call Date</label>
    <type>Date</type>
</CustomField>