unpackaged/main/default/objects/EBH_Project__c/fields/EBH_IntegrationMethod__c.field-meta.xml
<CustomField>
    <fullName>EBH_IntegrationMethod__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>Type of the integration method that was chosen by a seller during the sign up process  (assisted  set up by a relevant 3PP or self- assisted set up)</inlineHelpText>
    <label>Integration Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assisted Set Up</fullName>
            </value>
            <value>
                <fullName>Self-Assisted Set Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>