unpackaged/main/default/objects/EBH_Project__c/fields/EBH_InterestedWaitingListReasons__c.field-meta.xml
<CustomField>
    <fullName>EBH_InterestedWaitingListReasons__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>Constraints that prevents seller from participation in the Fulfilment programme.</inlineHelpText>
    <label>Interested/ Waiting List reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs time to decide/calculate</fullName>
            </value>
            <value>
                <fullName>Waiting for lower prices</fullName>
            </value>
            <value>
                <fullName>Waiting for better eBay ranking</fullName>
            </value>
            <value>
                <fullName>Waiting for other 3PP</fullName>
            </value>
            <value>
                <fullName>Waiting for different carrier</fullName>
            </value>
            <value>
                <fullName>Waiting for returns</fullName>
            </value>
            <value>
                <fullName>Waiting for restricted items</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>