unpackaged/main/default/objects/EBH_Project__c/fields/EBH_LastDayRefreshDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_LastDayRefreshDate__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>Date when data about a seller was given the last time from the Shutl portal</inlineHelpText>
    <label>Last Day Refresh Date</label>
    <type>Date</type>
</CustomField>