unpackaged/main/default/objects/EBH_Project__c/fields/EBH_NotInterestedValue__c.field-meta.xml
<CustomField>
    <fullName>EBH_NotInterestedValue__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>Reasons why seller is not willing to participate in the Fulfilment programme.</inlineHelpText>
    <label>Not Interested Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazon FF (active)</fullName>
            </value>
            <value>
                <fullName>Amazon FF (bad experience)</fullName>
            </value>
            <value>
                <fullName>Hangs up the phone</fullName>
            </value>
            <value>
                <fullName>Prices are too high</fullName>
            </value>
            <value>
                <fullName>Sees no clear advantage (price, seller protection, EDD)</fullName>
            </value>
            <value>
                <fullName>Goods are shipped directly from a manufacturer, dropshipping</fullName>
            </value>
            <value>
                <fullName>Don&#39;t want to change business model</fullName>
            </value>
            <value>
                <fullName>Unsuitable inventory (custom items, etc)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>