unpackaged/main/default/objects/EBH_Project__c/fields/EBH_Response__c.field-meta.xml
<CustomField>
    <fullName>EBH_Response__c</fullName>
    <description>#US-0015700</description>
    <label>Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Queue</fullName>
            </value>
            <value>
                <fullName>Call Cancelled</fullName>
            </value>
            <value>
                <fullName>Seller Ineligible</fullName>
            </value>
            <value>
                <fullName>Wrong phone number</fullName>
            </value>
            <value>
                <fullName>Call not answered</fullName>
            </value>
            <value>
                <fullName>Not reached</fullName>
            </value>
            <value>
                <fullName>DMC not reached</fullName>
            </value>
            <value>
                <fullName>DMC Not Interested</fullName>
            </value>
            <value>
                <fullName>DMC Interested</fullName>
            </value>
            <value>
                <fullName>DMC Committed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>