unpackaged/main/default/objects/EBH_Project__c/fields/EBH_ResponseAcquisition__c.field-meta.xml
<CustomField>
    <fullName>EBH_ResponseAcquisition__c</fullName>
    <description>#US-0015700</description>
    <label>Response (acquisition)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Queue</fullName>
            </value>
            <value>
                <fullName>Call Cancelled</fullName>
            </value>
            <value>
                <fullName>Seller Ineligible</fullName>
            </value>
            <value>
                <fullName>Wrong Phone Number</fullName>
            </value>
            <value>
                <fullName>Call not answered</fullName>
            </value>
            <value>
                <fullName>Not reached</fullName>
            </value>
            <value>
                <fullName>DMC Not Reached</fullName>
            </value>
            <value>
                <fullName>DMC Interested</fullName>
            </value>
            <value>
                <fullName>DMC Not Interested</fullName>
            </value>
            <value>
                <fullName>DMC Committed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>