unpackaged/main/default/objects/EBH_Project__c/fields/EBH_Seller__c.field-meta.xml
<CustomField>
    <fullName>EBH_Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#US-0015700. Lookup (Seller)</description>
    <label>Seller</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Seller</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>