unpackaged/main/default/objects/EBH_Project__c/fields/EBH_SignedUpInShutl__c.field-meta.xml
<CustomField>
    <fullName>EBH_SignedUpInShutl__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>Date when seller signed up in the Shutl Portal for the first time</inlineHelpText>
    <label>Signed Up in Shutl Date</label>
    <type>Date</type>
</CustomField>