unpackaged/main/default/objects/EBH_Project__c/fields/EBH_SoldItemDateFirst__c.field-meta.xml
<CustomField>
    <fullName>EBH_SoldItemDateFirst__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>Date when the first item was sold via Fiege, Fulfilment Center</inlineHelpText>
    <label>Sold Item Date (first)</label>
    <type>Date</type>
</CustomField>