unpackaged/main/default/objects/EBH_Project__c/fields/EBH_Stage__c.field-meta.xml
<CustomField>
    <fullName>EBH_Stage__c</fullName>
    <description>#US-0015700</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
                <default>true</default>
                <label>Acquisition</label>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>Scalling</fullName>
                <label>Selling</label>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Negotiate and Close</fullName>
            </value>
            <value>
                <fullName>New Project</fullName>
            </value>
            <value>
                <fullName>Proposal Created</fullName>
            </value>
            <value>
                <fullName>Pitched</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Pre - Integration</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Present &amp; Validate</fullName>
            </value>
            <value>
                <fullName>Negotiate</fullName>
            </value>
            <value>
                <fullName>Merchant Interested</fullName>
            </value>
            <value>
                <fullName>Merchant Agreement</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Preboarded</fullName>
            </value>
            <value>
                <fullName>Onboarded</fullName>
            </value>
            <value>
                <fullName>Live to Site (LTS)</fullName>
            </value>
            <value>
                <fullName>Paused during Integration</fullName>
            </value>
            <value>
                <fullName>Paused After Going Live</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Account Set up</fullName>
            </value>
            <value>
                <fullName>Technical Integration</fullName>
            </value>
            <value>
                <fullName>Scaling (Warranty)</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>