unpackaged/main/default/objects/EBH_Project__c/fields/EBH_ThirdPartyProvider3PPOther__c.field-meta.xml
<CustomField>
    <fullName>EBH_ThirdPartyProvider3PPOther__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>Third party provider (3PP) that seller is currently working with</inlineHelpText>
    <label>3PP (other)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>4sellers</fullName>
            </value>
            <value>
                <fullName>Afterbuy</fullName>
            </value>
            <value>
                <fullName>Channeladvisor</fullName>
            </value>
            <value>
                <fullName>Dreamrobot</fullName>
            </value>
            <value>
                <fullName>JTL</fullName>
            </value>
            <value>
                <fullName>M2E</fullName>
            </value>
            <value>
                <fullName>No 3PP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Own API</fullName>
            </value>
            <value>
                <fullName>Plentymarkets</fullName>
            </value>
            <value>
                <fullName>Speed4Trade</fullName>
            </value>
            <value>
                <fullName>Tradebyte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>