unpackaged/main/default/objects/EBH_Project__c/fields/EBH_ThirdPartyProviderChosen__c.field-meta.xml
<CustomField>
    <fullName>EBH_ThirdPartyProviderChosen__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>Third party provider that was selected as a part of the Onboarding process in Shutl</inlineHelpText>
    <label>3PP Selected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PLENTYMARKETS</fullName>
            </value>
            <value>
                <fullName>JTL</fullName>
            </value>
            <value>
                <fullName>AFTERBUY</fullName>
            </value>
            <value>
                <fullName>DREAMROBOT</fullName>
            </value>
            <value>
                <fullName>DREAMROBOTS</fullName>
            </value>
            <value>
                <fullName>ESDEMARCA</fullName>
            </value>
            <value>
                <fullName>CHANNELADVISOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>