unpackaged/main/default/objects/EBH_Project__c/fields/EBH_ThirdPartyProviderDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_ThirdPartyProviderDate__c</fullName>
    <description>#US-0015700</description>
    <inlineHelpText>Date when seller selected third party provider as a part of the Onboarding process in Shutl</inlineHelpText>
    <label>3PP Selected Date</label>
    <type>Date</type>
</CustomField>