unpackaged/main/default/objects/EBH_Project__c/fields/eFF_Current_SKUs_in_Stock__c.field-meta.xml
<CustomField>
    <fullName>eFF_Current_SKUs_in_Stock__c</fullName>
    <description>US-0007690 - Fulfilment- New Selling metrics</description>
    <label>eFF Current SKUs in Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>