unpackaged/main/default/objects/EBH_Project__c/fields/eFF_eBay_PLUS_Share_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>eFF_eBay_PLUS_Share_Last_30_Days__c</fullName>
    <inlineHelpText>Sold Items though Fulfillment % eBay Plus vs Total, last 30 days.</inlineHelpText>
    <label>eFF eBay PLUS % (Last 30 Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>