unpackaged/main/default/objects/EBH_Project__c/fields/eFF_sold_items_on_eBay_vs_Multichannel__c.field-meta.xml
<CustomField>
    <fullName>eFF_sold_items_on_eBay_vs_Multichannel__c</fullName>
    <description>US-0007690 - Fulfilment- New Selling metrics</description>
    <inlineHelpText>% eFF sold items on eBay vs Multichannel, last 30 days</inlineHelpText>
    <label>eFF Sold Items % eBay vs Multichannel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>