unpackaged/main/default/objects/EBH_Project__c/fields/EngagementStatus__c.field-meta.xml
<CustomField>
    <fullName>EngagementStatus__c</fullName>
    <description>US-0007635</description>
    <label>Engagement status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Engaged</fullName>
                <default>true</default>
                <label>Engaged</label>
            </value>
            <value>
                <fullName>Disengaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>