unpackaged/main/default/objects/EBH_Project__c/fields/Existing_previous_Underwriting_Status__c.field-meta.xml
<CustomField>
    <fullName>Existing_previous_Underwriting_Status__c</fullName>
    <description>US-0009462 - UK Risk: new permission, record type and page layout on Project</description>
    <formula>TEXT(EBH_Seller__r.Risk_Status__c)</formula>
    <inlineHelpText>Check if previously passed UW/Vetting, concerns recommendation and date.</inlineHelpText>
    <label>Existing/previous Underwriting Status</label>
    <type>Text</type>
</CustomField>