unpackaged/main/default/objects/EBH_Project__c/fields/Expected_Date_of_Reactivation_optional__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_of_Reactivation_optional__c</fullName>
    <description>US-0007683 - Fulfilment - CE Law &amp; Out of eFF fields</description>
    <label>Expected Date of Reactivation (optional)</label>
    <type>Date</type>
</CustomField>