unpackaged/main/default/objects/EBH_Project__c/fields/ExpectedLTSDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedLTSDate__c</fullName>
    <description>#US-0018736</description>
    <label>Expected LTS Date</label>
    <type>Date</type>
</CustomField>