unpackaged/main/default/objects/EBH_Project__c/fields/Express_Shipping_offered__c.field-meta.xml
<CustomField>
    <fullName>Express_Shipping_offered__c</fullName>
    <description>US-0010689</description>
    <label>Express Shipping offered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>