unpackaged/main/default/objects/EBH_Project__c/fields/ExtendedTechnicalIntegration__c.field-meta.xml
<CustomField>
    <fullName>ExtendedTechnicalIntegration__c</fullName>
    <description>US-0007500</description>
    <label>Extended Technical Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>