unpackaged/main/default/objects/EBH_Project__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>US-0015695: External ID field will be generated as a Surrogate key (Static Prefix + Oracle ID), sample: PRJ_FF-123456789</description>
    <externalId>true</externalId>
    <label>External ID (ETL)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>