unpackaged/main/default/objects/EBH_Project__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <description>US-0009462 - UK Risk: new permission, record type and page layout on Project</description>
    <formula>EBH_Seller__r.EBH_PositiveFeedback__c</formula>
    <label>Feedback</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>