unpackaged/main/default/objects/EBH_Project__c/fields/FeeTiersAUOnly__c.field-meta.xml
<CustomField>
    <fullName>FeeTiersAUOnly__c</fullName>
    <description>US-0007708 - [AU] New fields for &#39;Managed Payment&#39; Pagelayout for Project</description>
    <inlineHelpText>AU only fee structure</inlineHelpText>
    <label>Fee Tiers  (AU Only)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>VOD</fullName>
            </value>
            <value>
                <fullName>LMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>