unpackaged/main/default/objects/EBH_Project__c/fields/First_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Date__c</fullName>
    <description>US-0010569 - EU Acquisition: Adding Fields to Onboarding Projects</description>
    <inlineHelpText>Date of first call</inlineHelpText>
    <label>First Contact Date</label>
    <type>Date</type>
</CustomField>