unpackaged/main/default/objects/EBH_Project__c/fields/Forcasted_GMV__c.field-meta.xml
<CustomField>
    <fullName>Forcasted_GMV__c</fullName>
    <description>US-0009462 - UK Risk: new permission, record type and page layout on Project</description>
    <inlineHelpText>number of items multiplied by ASP</inlineHelpText>
    <label>Forcasted GMV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>