unpackaged/main/default/objects/EBH_Project__c/fields/GCX_handover_done__c.field-meta.xml
<CustomField>
    <fullName>GCX_handover_done__c</fullName>
    <description>US-0010569 - EU Acquisition: Adding Fields to Onboarding Projects</description>
    <label>GCX handover done</label>
    <type>Date</type>
</CustomField>