unpackaged/main/default/objects/EBH_Project__c/fields/Gear2Blockers__c.field-meta.xml
<CustomField>
    <fullName>Gear2Blockers__c</fullName>
    <description>US-0007635</description>
    <label>Gear 2 Blockers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>